# foobar2000

./: README.md
foo_audiohasher/: foo_audiohasher.cpp  foo_audiohasher.rc  foo_audiohasher.sln  foo_audiohasher.vcxproj  resource.h
foo_dsp_effect/: dsp_buffer.cpp  dsp_dynamics.cpp  dsp_echo.cpp  dsp_freeverb.cpp  dsp_iir.cpp  dsp_loudspeakereq.cpp  dsp_phaser.cpp  dsp_soundtouch.cpp  dsp_wahwah.cpp  echo.cpp  echo.h  foo_dsp_effect.rc  foo_dsp_effect.sln  foo_dsp_effect.vcxproj  foo_dsp_effect.vcxproj.filters  freeverb.cpp  freeverb.h  iirfilters.cpp  iirfilters.h  license.txt  main.cpp  phaser.cpp  phaser.h  postprocess_deemph.cpp  resource.h  wahwah.cpp  wahwah.h
foo_dsp_freeverb/: foo_dsp_freeverb.cpp  foo_dsp_freeverb.vcproj  foo_dsp_tutorial.rc  foo_dsp_tutorial.sln  freeverb.cpp  freeverb.h  resource.h
foo_dsp_speexresample/: arch.h  circular_buffer.h  dsp_resample.cpp  foo_dsp_effect.vcxproj  license.txt  main.cpp  resample.c  resample_sse.h  resource.h
foo_dsp_srcresample/: dsp_resample.cpp  foo_dsp_srcresample.rc  foo_dsp_srcresample.sln  foo_dsp_srcresample.vcxproj  main.cpp
foo_input_fc/: foo_input_fc.sln  foo_input_fc.vcxproj  input_fc.cpp
foo_input_fc/fclib/: Config.h.in  Makefile.am  Makefile.in
foo_input_modplug/: foo_input_modplug.sln  foo_input_modplug.vcxproj  input_modplug.cpp
foo_input_v2m/: foo_input_v2m.cpp  foo_input_ym.vcxproj  foo_input_ym.vcxproj.filters
foo_input_ym/: foo_input_ym.sln  foo_input_ym.vcxproj  input_ym.cpp
foo_mircnp/: foo_mircnp.cpp  foo_mircnp.sln  foo_mircnp.vcxproj  resource.h  resource.rc  targetver.h
(+27 files in other folders)
